# communication-patterns

./: ARCHITECTURE.md  GLOSSARY.md  README.md  pyproject.toml  visuals.html
appendices/appendix_a_grpc/: README.md  fooddash.proto  grpc_demo.py  visual.html
appendices/appendix_b_message_queues/: README.md  kafka_simulation.py  queue_vs_pubsub_demo.py  visual.html
appendices/appendix_c_graphql_subscriptions/: README.md  schema_demo.py  visual.html
appendices/appendix_d_resilience/: README.md  resilience_demo.py  visual.html
benchmarks/: README.md  connection_cost.py  polling_vs_sse_vs_ws.py
chapters/ch00_foundations/: README.md  http_from_scratch.py  tcp_echo_server.py  visual.html
chapters/ch01_request_response/: README.md  __main__.py  client.py  server.py  visual.html
chapters/ch02_short_polling/: README.md  client_poller.py  metrics.py  server.py  visual.html
chapters/ch03_long_polling/: README.md  __main__.py  client.py  comparison.py  server.py  visual.html
chapters/ch04_server_sent_events/: README.md  __main__.py  client.py  dashboard.html  server.py  visual.html
chapters/ch05_websockets/: README.md  __main__.py  chat_room.py  client.py  server.py  visual.html
chapters/ch06_push_notifications/: README.md  server.py  subscriber.py  visual.html
chapters/ch07_pub_sub/: README.md  __main__.py  broker.py  publisher.py  visual.html
exercises/: ch00_ch01_exercises.md  ch02_ch03_exercises.md  ch04_ch05_exercises.md  ch06_ch07_exercises.md  ch08_ch10_exercises.md  ch11_exercises.md
shared/: __init__.py  db.py  models.py
(+24 files in other folders)
